--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,11 @@ language: java
 jdk:
   - oraclejdk8
   
+before_install:
+  - pip install --user codecov
+  
 after_success:
+  - codecov
   - bash <(curl -s https://copilot.blackducksoftware.com/ci/travis/scripts/upload)
   
 notifications:
