Add coverage report merging plug-in

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ sonarqube {
     }
 }
 
+apply plugin: 'org.starchartlabs.flare.merge-coverage-reports'
+
 allprojects{
     apply plugin: 'java'
     apply plugin: 'eclipse'
