--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,6 @@
 version=0.1.0-SNAPSHOT
 
 # Consumed Language/Build System Versions
+# TODO romeara - upgrading to 4.5.1 breaks the Jacoco report merge plug-in
 javaVersion=1.8
-gradleVersion=4.5.1
+gradleVersion=3.5
