--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,9 @@ buildscript {
         jcenter()
     }
     dependencies {
+        classpath group: 'com.jfrog.bintray.gradle', name: 'gradle-bintray-plugin', version: '1.7.3'
         classpath group: 'com.netflix.nebula', name: 'nebula-dependency-recommender', version: '4.2.0'
+        classpath group: 'com.netflix.nebula', name: 'nebula-publishing-plugin', version: '4.2.0'
         classpath group: 'org.starchartlabs.flare', name: 'flare-operations-plugins', version: '0.2.0'
         classpath group: 'org.starchartlabs.flare', name: 'flare-publishing-plugins', version: '0.2.0'
     }
@@ -37,6 +39,7 @@ allprojects{
     apply plugin: 'eclipse'
     apply plugin: 'jacoco'
     apply plugin: 'nebula.dependency-recommender'
+    apply plugin: 'nebula.maven-resolved-dependencies'
     apply plugin: 'org.starchartlabs.flare.dependency-insight'
 
     dependencyRecommendations {
@@ -63,14 +66,28 @@ allprojects{
 }
 
 subprojects{
-    apply plugin: 'maven'
+    apply plugin: 'maven-publish'
+    apply plugin: 'com.jfrog.bintray'
+    apply plugin: 'nebula.maven-base-publish'
+    apply plugin: 'nebula.maven-dependencies'
     apply plugin: 'org.starchartlabs.flare.increase-test-logging'
     apply plugin: 'org.starchartlabs.flare.source-jars'
+    apply plugin: 'org.starchartlabs.flare.published-project'
     
     //Setup default test behavior, including failure logging
     test {
         useTestNG() {
             useDefaultListeners = true
+        }
+    }
+    
+    sonarqube {
+        properties {
+            property 'sonar.projectKey', "${project.group}:${project.name}"
+            property 'sonar.junit.reportsPath', file("${buildDir}/test-results/test")
+            property 'sonar.core.codeCoveragePlugin', 'jacoco'
+            property 'sonar.jacoco.reportPaths', "${buildDir}/jacoco/test.exec"
+            properties['sonar.sources'] = sourceSets.main.java.srcDirs.findAll { it.exists() && !it.path.contains('resources') } ?: []
         }
     }
 
@@ -99,13 +116,58 @@ subprojects{
         }
     }
 
-    sonarqube {
-        properties {
-            property 'sonar.projectKey', "${project.group}:${project.name}"
-            property 'sonar.junit.reportsPath', file("${buildDir}/test-results/test")
-            property 'sonar.core.codeCoveragePlugin', 'jacoco'
-            property 'sonar.jacoco.reportPaths', "${buildDir}/jacoco/test.exec"
-            properties['sonar.sources'] = sourceSets.main.java.srcDirs.findAll { it.exists() && !it.path.contains('resources') } ?: []
+    //If not a remote run, publish to local only
+    if(!project.hasProperty('remoteDeploy')){
+        publishing {
+            repositories {
+                mavenLocal()
+            }
         }
     }
+    
+    publishedInfo{
+        url = 'https://github.com/StarChart-Labs/calamari'
+      
+        scm{
+            github 'StarChart-Labs', 'calamari'
+        }
+      
+        licenses{
+            mit('repo')
+        }
+      
+        developers{
+            github 'romeara', 'Ryan OMeara'
+        }
+    }
+    
+    bintray {
+        user = System.getProperty('bintray_user')
+        key = System.getProperty('bintray_key')
+        publications = [ 'nebula' ]
+
+        if(!project.hasProperty('remoteDeploy')){
+            dryRun = true
+        }
+
+        pkg {
+            repo = 'calamari'
+            name = "${project.name}"
+            userOrg = 'starchart-labs'
+            licenses = ['MIT']
+            vcsUrl = 'https://github.com/StarChart-Labs/calamari'
+
+            version {
+                name = "${project.version}"
+                desc = "${project.name} release ${project.version} final"
+                released  = new Date()
+                vcsTag = "${project.version}"
+
+                gpg {
+                    sign = true
+                }
+            }
+        }
+    }
+    
 }
