--- a/calamari-core/build.gradle
+++ b/calamari-core/build.gradle
@@ -1,3 +1,5 @@
+description = 'Utilities for interacting with GitHub as a GitHub App'
+
 dependencies {
     compile 'com.google.code.findbugs:jsr305'
     compile 'com.google.code.gson:gson'
