Add utility for reading text-based file content from GitHub
Add FileContentLoader, which handles the general GitHub App flow
required to read and decode text-based file content from GitHub

--- a/calamari-core/build.gradle
+++ b/calamari-core/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     compile 'org.starchartlabs.alloy:alloy-core'
     
     testCompile 'com.squareup.okhttp3:mockwebserver'
+    testCompile 'org.mockito:mockito-core'
     testCompile 'org.testng:testng'
     
     testRuntime 'org.slf4j:slf4j-simple'
