GH-17 Update version and API used of BouncyCastle encryption libraries
Update to a bouncycastle bc*150n from bc*16, as these are the more
recent and ongoing release artifacts for bouncycastle.

This update involved adjusting the private key reading algorithm in
ApplicationKey, switching off the legacy PEMReader in favor of the
PEMParser

During the update, on the last version PEMReader and PEMParse
co-existed, ApplicationKey production code was updated, and then tested
against the original test (which was still using the PEMReader) to
verify no change in output/behavior, after which the test was also
updated

This change also updates the README to reflect that a separate
repository from Maven Central will no longer be required after the next
release

--- a/calamari-core/build.gradle
+++ b/calamari-core/build.gradle
@@ -6,7 +6,8 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp'
     compile 'commons-codec:commons-codec'
     compile 'io.jsonwebtoken:jjwt'
-    compile 'org.bouncycastle:bcprov-jdk16'
+    compile 'org.bouncycastle:bcpkix-jdk15on'
+    compile 'org.bouncycastle:bcprov-jdk15on'
     compile 'org.slf4j:slf4j-api'
     compile 'org.starchartlabs.alloy:alloy-core'
     
