--- a/dependencies.properties
+++ b/dependencies.properties
@@ -13,7 +13,8 @@ commons-codec:commons-codec=1.10
 
 io.jsonwebtoken:jjwt=0.9.1
 
-org.bouncycastle:bcprov-jdk16=1.46-redhat-2
+org.bouncycastle:bcpkix-jdk15on=1.61
+org.bouncycastle:bcprov-jdk15on=1.61
 
 org.starchartlabs.alloy:alloy-core=0.4.0
 
