--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Application Versions
-version=0.3.3
+version=0.3.4-SNAPSHOT
 
 # Consumed Language/Build System Versions
 # TODO romeara - upgrading to 4.5.1 breaks the Jacoco report merge plug-in
