Update to Gradle 4.0

--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ buildscript {
         classpath group: 'com.jfrog.bintray.gradle', name: 'gradle-bintray-plugin', version: '1.7.3'
         classpath group: 'com.netflix.nebula', name: 'nebula-dependency-recommender', version: '4.2.0'
         classpath group: 'com.netflix.nebula', name: 'nebula-publishing-plugin', version: '4.2.0'
-        classpath group: 'org.starchartlabs.flare', name: 'flare-operations-plugins', version: '1.0.0'
-        classpath group: 'org.starchartlabs.flare', name: 'flare-publishing-plugins', version: '0.2.0'
+        classpath group: 'org.starchartlabs.flare', name: 'flare-operations-plugins', version: '1.1.0'
+        classpath group: 'org.starchartlabs.flare', name: 'flare-publishing-plugins', version: '0.3.0'
     }
 }
 
@@ -34,10 +34,18 @@ sonarqube {
 
 apply plugin: 'org.starchartlabs.flare.merge-coverage-reports'
 
+mergeCoverageReports {
+    reports {
+        xml.enabled true
+        html.enabled false
+        csv.enabled false
+        
+        xml.destination = "${buildDir}/reports/jacoco/report.xml"
+    }
+}
+
 allprojects{
-    apply plugin: 'java'
     apply plugin: 'eclipse'
-    apply plugin: 'jacoco'
     apply plugin: 'nebula.dependency-recommender'
     apply plugin: 'nebula.maven-resolved-dependencies'
     apply plugin: 'org.starchartlabs.flare.dependency-insight'
@@ -46,15 +54,10 @@ allprojects{
         propertiesFile file: file("${rootDir}/dependencies.properties")
     }
 
-    group = 'org.starchartlabs.calamari'
-
-    sourceCompatibility = "${javaVersion}"
-
     //Always download sources, to allow debugging, and use Eclipse containers for greater portability
     eclipse {
         classpath {
             downloadSources=true
-            containers = [ "org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-${sourceCompatibility}".toString() ]
         }
     }
 
@@ -65,6 +68,8 @@ allprojects{
 }
 
 subprojects{
+    apply plugin: 'java'
+    apply plugin: 'jacoco'
     apply plugin: 'maven-publish'
     apply plugin: 'com.jfrog.bintray'
     apply plugin: 'nebula.maven-base-publish'
