--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,9 @@
-# Application Versions
+# General library settings
+group =org.starchartlabs.calamari
 version=0.3.4-SNAPSHOT
 
+org.gradle.console=plain
+org.gradle.warning.mode=all
+
 # Consumed Language/Build System Versions
-# TODO romeara - upgrading to 4.5.1 breaks the Jacoco report merge plug-in
-javaVersion=1.8
-gradleVersion=3.5
+sourceCompatibility=1.8
