Update to Gradle 5.6.2 and new multi-module plug-in methodology

--- a/build.gradle
+++ b/build.gradle
@@ -3,25 +3,16 @@ buildscript {
         maven { url 'https://plugins.gradle.org/m2/' }
     }
     dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-        classpath 'com.netflix.nebula:nebula-dependency-recommender:4.2.0'
-        classpath 'com.netflix.nebula:nebula-publishing-plugin:4.2.0'
-        classpath 'org.starchartlabs.flare:flare-operations-plugins:2.0.0'
-        classpath 'org.starchartlabs.flare:flare-publishing-plugins:1.0.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
     }
 }
 
-apply plugin: 'org.starchartlabs.flare.merge-coverage-reports'
+plugins {
+    id 'org.starchartlabs.flare.multi-module-library' version '0.2.1'
+}
 
 allprojects{
     apply plugin: 'eclipse'
-    apply plugin: 'nebula.dependency-recommender'
-    apply plugin: 'nebula.maven-resolved-dependencies'
-    apply plugin: 'org.starchartlabs.flare.dependency-reporting'
-
-    dependencyRecommendations {
-        propertiesFile file: file("${rootDir}/dependencies.properties")
-    }
 
     // Always download sources, to allow debugging, and use Eclipse containers for greater portability
     eclipse {
@@ -37,15 +28,20 @@ allprojects{
 }
 
 subprojects{
-    apply plugin: 'java'
+    apply plugin: 'java-library'
     apply plugin: 'jacoco'
     apply plugin: 'maven-publish'
     apply plugin: 'com.jfrog.bintray'
-    apply plugin: 'nebula.maven-base-publish'
-    apply plugin: 'nebula.maven-dependencies'
-    apply plugin: 'org.starchartlabs.flare.increase-test-logging'
-    apply plugin: 'org.starchartlabs.flare.source-jars'
-    apply plugin: 'org.starchartlabs.flare.published-project'
+    
+    projectMetaData {
+        github {
+            repository 'StarChart-Labs', 'calamari'
+        }
+        
+        licenses {
+            mit()
+        }
+    }
     
     // Setup default test behavior, including failure logging
     test {
@@ -57,29 +53,26 @@ subprojects{
     tasks.withType(JavaCompile) {
         options.deprecation = true
     }
-
+    
     // Apply module naming to all projects
     // Add LICENSE so it is included in all JARs, as well as dependent licenses, fulfilling the "distributions include license" requirement
     jar {
         manifest {
             attributes("Automatic-Module-Name": "${project.group}.${project.name  - 'calamari-'}".replaceAll("-", "."))
         }
-        
+    }
+    
+    tasks.withType(Jar).all {
         from("${rootDir}"){
             include 'LICENSE'
         }
     }
     
-    // All projects should provide source code and javadoc, and upload these with any released artifacts
-    sourcesJar {
-        from("${rootDir}"){
-            include 'LICENSE'
-        }
-    }
-
-    javadocJar{
-        from("${rootDir}"){
-            include 'LICENSE'
+    publishing {
+        publications {
+            maven(MavenPublication) {
+                from components.java
+            }
         }
     }
 
@@ -92,26 +85,8 @@ subprojects{
         }
     }
     
-    publishedInfo{
-        url = 'https://github.com/StarChart-Labs/calamari'
-      
-        scm{
-            github 'StarChart-Labs', 'calamari'
-        }
-      
-        licenses{
-            mit('repo')
-        }
-      
-        developers{
-            github 'romeara', 'Ryan OMeara'
-        }
-    }
-    
     bintray {
-        user = System.getProperty('bintray_user')
-        key = System.getProperty('bintray_key')
-        publications = [ 'nebula' ]
+        publications = [ 'maven' ]
 
         if(!project.hasProperty('remoteDeploy')){
             dryRun = true
@@ -122,7 +97,7 @@ subprojects{
             name = "${project.name}"
             userOrg = 'starchart-labs'
             licenses = ['MIT']
-            vcsUrl = 'https://github.com/StarChart-Labs/calamari'
+            vcsUrl = "${projectMetaData.scm.vcsUrl}"
 
             version {
                 name = "${project.version}"
@@ -133,6 +108,15 @@ subprojects{
                 gpg {
                     sign = true
                 }
+            }
+        }
+    }
+    
+    bintrayUpload {
+        doFirst {
+            project.bintray {
+                user = "${credentials.bintray.username}"
+                key = "${credentials.bintray.password}"
             }
         }
     }
