--- a/dependencies.properties
+++ b/dependencies.properties
@@ -2,26 +2,26 @@
 # Entries are ordered alphabetically by group, then artifact
 # Entries are in groups/blocks based on matching group IDs
 
-com.google.code.findbugs:jsr305=3.0.2
+com.google.code.findbugs:jsr305:3.0.2,compileOnly
 
-com.google.code.gson:gson=2.8.5
+com.google.code.gson:gson:2.8.5
 
-com.squareup.okhttp3:mockwebserver=3.13.1
-com.squareup.okhttp3:okhttp=3.13.1
+com.squareup.okhttp3:mockwebserver:3.13.1,testImplementation
+com.squareup.okhttp3:okhttp:3.13.1
 
-commons-codec:commons-codec=1.12
+commons-codec:commons-codec:1.12
 
-io.jsonwebtoken:jjwt-api=0.10.6
-io.jsonwebtoken:jjwt-impl=0.10.6
+io.jsonwebtoken:jjwt-api:0.10.6
+io.jsonwebtoken:jjwt-impl:0.10.6,implementation
 
-org.bouncycastle:bcpkix-jdk15on=1.61
-org.bouncycastle:bcprov-jdk15on=1.61
+org.bouncycastle:bcpkix-jdk15on:1.61
+org.bouncycastle:bcprov-jdk15on:1.61
 
-org.starchartlabs.alloy:alloy-core=0.4.1
+org.starchartlabs.alloy:alloy-core:0.4.1
 
-org.mockito:mockito-core=2.25.0
+org.mockito:mockito-core:2.25.0,testImplementation
 
-org.slf4j:slf4j-api=1.7.26
-org.slf4j:slf4j-simple=1.7.26
+org.slf4j:slf4j-api:1.7.26
+org.slf4j:slf4j-simple:1.7.26,testImplementation
 
-org.testng:testng=6.14.3
+org.testng:testng:6.14.3,testImplementation
