Update to release version 0.4.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # General library settings
 group =org.starchartlabs.calamari
-version=0.4.1-SNAPSHOT
+version=0.4.1
 
 org.gradle.console=plain
 org.gradle.warning.mode=all
