--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # General library settings
 group =org.starchartlabs.calamari
-version=0.4.1
+version=0.4.2-SNAPSHOT
 
 org.gradle.console=plain
 org.gradle.warning.mode=all
