--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,8 @@
-buildscript {
-    repositories {
-        maven { url 'https://plugins.gradle.org/m2/' }
-    }
-    dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
-    }
-}
-
 plugins {
     id 'org.starchartlabs.flare.multi-module-library' version '1.0.0'
+    
+    // Plug-ins not applied at the root level, but used in sub-projects
+    id 'com.jfrog.bintray' version '1.8.5' apply false
 }
 
 allprojects{
@@ -17,14 +11,13 @@ allprojects{
     // Always download sources, to allow debugging, and use Eclipse containers for greater portability
     eclipse {
         classpath {
-            downloadSources=true
+            downloadSources = true
         }
     }
 
     repositories {
         mavenCentral()
     }
-
 }
 
 subprojects{
@@ -47,7 +40,7 @@ subprojects{
     checkstyle {
         configFile = rootProject.file('config/checkstyle/checkstyle.xml')
         configProperties = [ 'checkstyle.config.dir' : rootProject.file('config/checkstyle') ]
-        toolVersion = '8.29'
+        toolVersion = '8.33'
     }
      
     task checkstyleAll{}
