--- a/dependencies.properties
+++ b/dependencies.properties
@@ -4,24 +4,24 @@
 
 com.google.code.findbugs:jsr305:3.0.2,compileOnly
 
-com.google.code.gson:gson:2.8.6
+com.google.code.gson:gson:2.8.6,api
 
 com.squareup.okhttp3:mockwebserver:3.14.4,testImplementation
-com.squareup.okhttp3:okhttp:3.14.4
+com.squareup.okhttp3:okhttp:3.14.4,api
 
-commons-codec:commons-codec:1.13
+commons-codec:commons-codec:1.13,api
 
-io.jsonwebtoken:jjwt-api:0.10.7
+io.jsonwebtoken:jjwt-api:0.10.7,api
 io.jsonwebtoken:jjwt-impl:0.10.7,implementation
 
-org.bouncycastle:bcpkix-jdk15on:1.64
-org.bouncycastle:bcprov-jdk15on:1.64
+org.bouncycastle:bcpkix-jdk15on:1.64,api
+org.bouncycastle:bcprov-jdk15on:1.64,api
 
-org.starchartlabs.alloy:alloy-core:0.5.0
+org.starchartlabs.alloy:alloy-core:0.5.0,api
 
 org.mockito:mockito-core:2.28.2,testImplementation
 
-org.slf4j:slf4j-api:1.7.29
+org.slf4j:slf4j-api:1.7.29,api
 org.slf4j:slf4j-simple:1.7.29,testImplementation
 
 org.testng:testng:6.14.3,testImplementation
