Resolves GH-20 Replace custom GSON JWT handler with updated JJWT library
Update JJWT 0.11.2, which includes a GSON serialization handler. This
allows removal of a custom GSON serializer implementation within the
Calamari library

--- a/calamari-core/build.gradle
+++ b/calamari-core/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     api 'org.slf4j:slf4j-api'
     api 'org.starchartlabs.alloy:alloy-core'
     
+    implementation 'io.jsonwebtoken:jjwt-gson'
     implementation 'io.jsonwebtoken:jjwt-impl'
     
     testImplementation 'com.squareup.okhttp3:mockwebserver'
