--- a/dependencies.properties
+++ b/dependencies.properties
@@ -11,8 +11,10 @@ com.squareup.okhttp3:okhttp:4.7.2,api
 
 commons-codec:commons-codec:1.13,api
 
-io.jsonwebtoken:jjwt-api:0.10.7,api
-io.jsonwebtoken:jjwt-impl:0.10.7,implementation
+io.jsonwebtoken:jjwt-api:0.11.2,api
+io.jsonwebtoken:jjwt-gson:0.11.2,implementation
+io.jsonwebtoken:jjwt-impl:0.11.2,implementation
+
 
 org.bouncycastle:bcpkix-jdk15on:1.64,api
 org.bouncycastle:bcprov-jdk15on:1.64,api
