--- a/dependencies.properties
+++ b/dependencies.properties
@@ -15,6 +15,9 @@ io.jsonwebtoken:jjwt-api:0.11.2,api
 io.jsonwebtoken:jjwt-gson:0.11.2,implementation
 io.jsonwebtoken:jjwt-impl:0.11.2,implementation
 
+# Override TestNG transitive dependency from 1.10.3 to 1.10.8 for security fixes (TestNG 7.3.0)
+org.apache.ant:ant:1.10.8,testImplementation
+
 
 org.bouncycastle:bcpkix-jdk15on:1.66,api
 org.bouncycastle:bcprov-jdk15on:1.66,api
