Allow publishing directly to central from GitHub actions

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,5 @@
 plugins {
     id 'org.starchartlabs.flare.multi-module-library' version '1.0.0'
-    
-    // Plug-ins not applied at the root level, but used in sub-projects
-    id 'com.jfrog.bintray' version '1.8.5' apply false
 }
 
 allprojects{
@@ -25,7 +22,7 @@ subprojects{
     apply plugin: 'checkstyle'
     apply plugin: 'jacoco'
     apply plugin: 'maven-publish'
-    apply plugin: 'com.jfrog.bintray'
+    apply plugin: 'signing'
     
     projectMetaData {
         github {
@@ -78,8 +75,42 @@ subprojects{
         publications {
             maven(MavenPublication) {
                 from components.java
+                
+                repositories {
+                    // If not a remote run, publish to local only
+                    if(!project.hasProperty('remoteDeploy')){
+                        mavenLocal()
+                        
+                        project.logger.lifecycle('Configured for local publishing')
+                    }else{
+                        maven {
+                            if(!version.endsWith("SNAPSHOT")){
+                                url "https://oss.sonatype.org/service/local/staging/deploy/maven2"
+                                
+                                project.logger.lifecycle('Configured for release publishing')
+                            }else{
+                                url "https://oss.sonatype.org/content/repositories/snapshots/"
+                                
+                                project.logger.lifecycle('Configured for snapshot publishing')
+                            }
+                            
+                            credentials {
+                                username System.getenv("OSSRH_USERNAME")
+                                password System.getenv("OSSRH_PASSWORD")
+                            }
+                        }
+                    }
+                }
             }
         }
+    }
+    
+    signing {
+        required { project.hasProperty('remoteDeploy') || project.hasProperty('sign') }
+        
+        useInMemoryPgpKeys(System.getenv("OSSRH_SIGNING_KEY"), System.getenv("OSSRH_SIGNING_PASSWORD"))
+    
+        sign publishing.publications.maven
     }
 
     // If not a remote run, publish to local only
@@ -88,41 +119,6 @@ subprojects{
             repositories {
                 mavenLocal()
             }
-        }
-    }
-    
-    bintray {
-        publications = [ 'maven' ]
-
-        if(!project.hasProperty('remoteDeploy')){
-            dryRun = true
-        }
-
-        pkg {
-            repo = 'calamari'
-            name = "${project.name}"
-            userOrg = 'starchart-labs'
-            licenses = ['MIT']
-            vcsUrl = "${projectMetaData.scm.vcsUrl}"
-
-            version {
-                name = "${project.version}"
-                desc = "${project.name} release ${project.version} final"
-                released  = new Date()
-                vcsTag = "${project.version}"
-
-                gpg {
-                    sign = true
-                }
-            }
-        }
-    }
-    
-    // TODO romeara workaround until deferred credential reading is available in flare-plugins
-    bintrayUpload {
-        doFirst {
-            user = "${credentials.bintray.username}"
-            apiKey = "${credentials.bintray.password}"
         }
     }
     
