--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # General library settings
 group =org.starchartlabs.calamari
-version=1.2.1-SNAPSHOT
+version=1.2.1
 
 org.gradle.console=plain
 org.gradle.warning.mode=all
