--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -3,22 +3,25 @@ name: Java CI
 on: [push, pull_request]
 
 jobs:
+
   build:
 
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1.4.4
-      with:
-        java-version: 1.8
-    - name: Build with Gradle
+    - name: Checkout project sources
+      uses: actions/checkout@v2
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+    - name: Run build with Gradle Wrapper
       run: ./gradlew build
     - name: CodeCov
       uses: codecov/codecov-action@v1.0.2
       with:
         token: ${{secrets.CODECOV_UPLOAD_TOKEN}}
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1.4.4
+      with:
+        java-version: 1.8
     - name: Upload to CoPilot
       if: github.event_name == 'push' || github.event_name == 'pull_request'
       run: bash <(curl -s https://copilot.blackducksoftware.com/ci/githubactions/scripts/upload)
