--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ allprojects{
 
     repositories {
         mavenCentral()
+        maven{
+            url "https://repo1.maven.org/maven2/"
+        }
     }
 }
 
