Update to dev version 1.2.3-SNAPSHOT

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # General library settings
 group =org.starchartlabs.calamari
-version=1.2.2
+version=1.2.3-SNAPSHOT
 
 org.gradle.console=plain
 org.gradle.warning.mode=all
